--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-i18next": "^8.5.1",
     "next-seo": "^4.26.0",
     "node-fetch": "^2.6.1",
+    "postcss-100vh-fix": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.0.0",
